--- a/02_neural_network_classification_with_tensorflow_video.ipynb
+++ b/02_neural_network_classification_with_tensorflow_video.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPGWA5R44jUikTCa4YTw8j8",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/JJThoms1/02_neural_network_classification_with_tensorflow_video/blob/main/02_neural_network_classification_with_tensorflow_video.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -70,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dky9o4LEIX4o",
-        "outputId": "56a1cf3b-8593-467b-cdec-50c3fb798961"
+        "outputId": "e4ae34a7-ea6f-4465-96e9-1e4be65314ff"
       },
       "execution_count": 2,
       "outputs": [
@@ -103,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BwtgCCxXIoVC",
-        "outputId": "265dc6d7-9046-4115-cb7b-1d782ba7df74"
+        "outputId": "fc4003ca-142e-4161-817e-c8f61f08aa0a"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +127,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
@@ -141,9 +153,9 @@
           "height": 424
         },
         "id": "zRfaa10_IsQC",
-        "outputId": "9ee9fd4a-f9f7-4520-ad25-9e79fe1cd59e"
+        "outputId": "89c6dca7-6b85-40b6-bac2-901420a8b8df"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +178,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-860ec7cb-f01d-453a-9a75-77db9ed2a64e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9539d812-0b50-4bc5-8454-b986e20cbb73\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -264,7 +276,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-860ec7cb-f01d-453a-9a75-77db9ed2a64e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9539d812-0b50-4bc5-8454-b986e20cbb73')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -316,12 +328,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-860ec7cb-f01d-453a-9a75-77db9ed2a64e button.colab-df-convert');\n",
+              "        document.querySelector('#df-9539d812-0b50-4bc5-8454-b986e20cbb73 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-860ec7cb-f01d-453a-9a75-77db9ed2a64e');\n",
+              "        const element = document.querySelector('#df-9539d812-0b50-4bc5-8454-b986e20cbb73');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -341,8 +353,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e9965094-aa8e-440a-88d8-61f9dd2c3254\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e9965094-aa8e-440a-88d8-61f9dd2c3254')\"\n",
+              "<div id=\"df-57586c79-4129-4659-88b1-bed2766653f9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-57586c79-4129-4659-88b1-bed2766653f9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -461,14 +473,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e9965094-aa8e-440a-88d8-61f9dd2c3254 button');\n",
+              "        document.querySelector('#df-57586c79-4129-4659-88b1-bed2766653f9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_bcb26451-4957-48d6-8c38-78a53b630faf\">\n",
+              "  <div id=\"id_5b8dcacc-7dfe-487d-a78f-8634c9315a7b\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -512,7 +524,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_bcb26451-4957-48d6-8c38-78a53b630faf button.colab-df-generate');\n",
+              "        document.querySelector('#id_5b8dcacc-7dfe-487d-a78f-8634c9315a7b button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -533,7 +545,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -550,9 +562,9 @@
           "height": 430
         },
         "id": "NXjNGc9eJb3m",
-        "outputId": "068b687e-da78-4dff-fb44-4ea2b0c23dea"
+        "outputId": "2f52c4cf-abbe-459f-8bc3-d29f41fd4def"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -567,10 +579,118 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "🛠️ **Exercise:** Before pushing forward, spend 10 minutes playing around with https://playground.tensorflow.org building and running different neural networks. See what happens when you change different hyperparameters."
+      ],
+      "metadata": {
+        "id": "4fO3SCK7JrvO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Input and output shapes"
+      ],
+      "metadata": {
+        "id": "eV3sK-cKJvJz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check the shapes of our features and labels\n",
+        "X.shape, y.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dMb2fqV3KgYG",
+        "outputId": "9e07d278-a42f-4f25-cb38-2d0115868e67"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1000, 2), (1000,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# How many samples we're working with\n",
+        "len(X), len(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i2Dh_h2RKr34",
+        "outputId": "1e4d55d1-7b58-46ed-c935-636488747971"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1000, 1000)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the first example of feature and labels\n",
+        "X[0], y[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H0h8KiRjKxL5",
+        "outputId": "ce56019a-a6b8-4a13-e626-2f7c817ce3a0"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([0.75424625, 0.23148074]), 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Steps in modelling"
+      ],
+      "metadata": {
+        "id": "3ndx4QqfLDhF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "eV3sK-cKJvJz"
+        "id": "iVmrRuoMLUjs"
       },
       "execution_count": null,
       "outputs": []
