--- a/02_neural_network_classification_with_tensorflow_video.ipynb
+++ b/02_neural_network_classification_with_tensorflow_video.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGWA5R44jUikTCa4YTw8j8",
+      "authorship_tag": "ABX9TyOKJyOrYMwXBMb5RSxKR1M+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -680,7 +680,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Steps in modelling"
+        "## Steps in modelling\n",
+        "\n",
+        "The steps in modelling with Tensorflow are typically:\n",
+        "\n",
+        "1. Create or import a model\n",
+        "2. Compile the model\n",
+        "3. Fit the model\n",
+        "4. Evaluate the model\n",
+        "5. Tweak\n",
+        "6. Evaluate"
       ],
       "metadata": {
         "id": "3ndx4QqfLDhF"
@@ -688,9 +697,196 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "# 1. Set the random seed\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# Create the model using the Sequential API\n",
+        "model_1 = tf.keras.Sequential([\n",
+        "  tf.keras.layers.Dense(1)\n",
+        "])\n",
+        "\n",
+        "# 2. Compile the model\n",
+        "model_1.compile(loss= tf.keras.losses.BinaryCrossentropy(),\n",
+        "              optimizer= tf.keras.optimizers.SGD(),\n",
+        "              metrics=[\"accuracy\"])\n",
+        "\n",
+        "# 3. Fit the model\n",
+        "model_1.fit(X, y, epochs=5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iVmrRuoMLUjs",
+        "outputId": "d2b7113e-6f5a-4119-f9ca-e2fdf6c4d94f"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "32/32 [==============================] - 1s 2ms/step - loss: 4.3912 - accuracy: 0.4760\n",
+            "Epoch 2/5\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 1.3479 - accuracy: 0.4900\n",
+            "Epoch 3/5\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7321 - accuracy: 0.4950\n",
+            "Epoch 4/5\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7055 - accuracy: 0.5020\n",
+            "Epoch 5/5\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6973 - accuracy: 0.4830\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7abd78e165c0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's try and imporve our model by training it for longer...\n",
+        "model_1.fit(X, y, epochs=200, verbose=0)\n",
+        "model_1.evaluate(X, y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5Lb2N0b5gHPW",
+        "outputId": "a195a8d1-c560-45e5-c982-5b05e888b1f4"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6935 - accuracy: 0.5000\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6934831142425537, 0.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since we're working on a binary classification problem and our model is getting around 50% accuracy... its performing as if it's guessing.\n",
+        "\n",
+        "Se let's step things up a notch by adding an extra layer."
+      ],
+      "metadata": {
+        "id": "GWicQcHxhLvQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set the random seed\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# 1. Create a model, this time with 2 layers\n",
+        "model_2 = tf.keras.Sequential([\n",
+        "  tf.keras.layers.Dense(1),\n",
+        "  tf.keras.layers.Dense(1)\n",
+        "])\n",
+        "\n",
+        "# 2. Compile the model\n",
+        "model_2.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+        "                optimizer=tf.keras.optimizers.SGD(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "# 3. Fit the model\n",
+        "model_2.fit(X, y, epochs=100, verbose=0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tKva9TTMhCJV",
+        "outputId": "1c9ef9c2-e18d-42d7-d77c-65aa97a88d54"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7abd7851da80>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. Evaluate the model\n",
+        "model_2.evaluate(X, y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ksl8m835impW",
+        "outputId": "185e0f3f-0e19-4663-9177-b2466990fcc3"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32/32 [==============================] - 0s 3ms/step - loss: 0.6933 - accuracy: 0.5000\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6932982802391052, 0.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Impoving our model"
+      ],
+      "metadata": {
+        "id": "qGb360u-i1MK"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "iVmrRuoMLUjs"
+        "id": "HDjsivkCjEGO"
       },
       "execution_count": null,
       "outputs": []
