--- a/02_neural_network_classification_with_tensorflow_video.ipynb
+++ b/02_neural_network_classification_with_tensorflow_video.ipynb
@@ -82,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dky9o4LEIX4o",
-        "outputId": "e4ae34a7-ea6f-4465-96e9-1e4be65314ff"
+        "outputId": "231145e5-abb7-4403-9a55-ed02bba683f7"
       },
       "execution_count": 2,
       "outputs": [
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BwtgCCxXIoVC",
-        "outputId": "fc4003ca-142e-4161-817e-c8f61f08aa0a"
+        "outputId": "36419106-fef9-463a-a554-a20fbe21086f"
       },
       "execution_count": 3,
       "outputs": [
@@ -153,7 +153,7 @@
           "height": 424
         },
         "id": "zRfaa10_IsQC",
-        "outputId": "89c6dca7-6b85-40b6-bac2-901420a8b8df"
+        "outputId": "d365df9f-3267-4dd6-a50e-dfedd1fe3f0b"
       },
       "execution_count": 4,
       "outputs": [
@@ -178,7 +178,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9539d812-0b50-4bc5-8454-b986e20cbb73\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1f3ba393-a2ec-4ea9-a30e-b9cf234edc73\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -276,7 +276,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9539d812-0b50-4bc5-8454-b986e20cbb73')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1f3ba393-a2ec-4ea9-a30e-b9cf234edc73')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -328,12 +328,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9539d812-0b50-4bc5-8454-b986e20cbb73 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1f3ba393-a2ec-4ea9-a30e-b9cf234edc73 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9539d812-0b50-4bc5-8454-b986e20cbb73');\n",
+              "        const element = document.querySelector('#df-1f3ba393-a2ec-4ea9-a30e-b9cf234edc73');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -353,8 +353,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-57586c79-4129-4659-88b1-bed2766653f9\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-57586c79-4129-4659-88b1-bed2766653f9')\"\n",
+              "<div id=\"df-a8e759ce-69ed-4a2a-a7cf-f05d8df2b0d2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a8e759ce-69ed-4a2a-a7cf-f05d8df2b0d2')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -473,14 +473,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-57586c79-4129-4659-88b1-bed2766653f9 button');\n",
+              "        document.querySelector('#df-a8e759ce-69ed-4a2a-a7cf-f05d8df2b0d2 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_5b8dcacc-7dfe-487d-a78f-8634c9315a7b\">\n",
+              "  <div id=\"id_9e21963c-41d1-4eb4-8e75-128e2872627c\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -524,7 +524,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_5b8dcacc-7dfe-487d-a78f-8634c9315a7b button.colab-df-generate');\n",
+              "        document.querySelector('#id_9e21963c-41d1-4eb4-8e75-128e2872627c button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -562,7 +562,7 @@
           "height": 430
         },
         "id": "NXjNGc9eJb3m",
-        "outputId": "2f52c4cf-abbe-459f-8bc3-d29f41fd4def"
+        "outputId": "ee0a5f5f-6a6c-4f75-f4c5-990ce274ba55"
       },
       "execution_count": 5,
       "outputs": [
@@ -607,7 +607,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dMb2fqV3KgYG",
-        "outputId": "9e07d278-a42f-4f25-cb38-2d0115868e67"
+        "outputId": "6da69a74-188a-4b2c-aa5d-ffe69f3671df"
       },
       "execution_count": 6,
       "outputs": [
@@ -634,9 +634,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i2Dh_h2RKr34",
-        "outputId": "1e4d55d1-7b58-46ed-c935-636488747971"
+        "outputId": "13b6c8f6-a1a4-44f4-9cbe-c5ae7ddea0d8"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +646,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -661,9 +661,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H0h8KiRjKxL5",
-        "outputId": "ce56019a-a6b8-4a13-e626-2f7c817ce3a0"
+        "outputId": "18685446-54fc-46f7-c958-7661d14efc40"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -673,7 +673,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 8
         }
       ]
     },
@@ -720,35 +720,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iVmrRuoMLUjs",
-        "outputId": "d2b7113e-6f5a-4119-f9ca-e2fdf6c4d94f"
+        "outputId": "98ab13c6-3f4c-4b92-cc20-7e5e39d44383"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "32/32 [==============================] - 1s 2ms/step - loss: 4.3912 - accuracy: 0.4760\n",
+            "32/32 [==============================] - 1s 2ms/step - loss: 2.0477 - accuracy: 0.4620\n",
             "Epoch 2/5\n",
-            "32/32 [==============================] - 0s 2ms/step - loss: 1.3479 - accuracy: 0.4900\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7337 - accuracy: 0.4970\n",
             "Epoch 3/5\n",
-            "32/32 [==============================] - 0s 2ms/step - loss: 0.7321 - accuracy: 0.4950\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.7055 - accuracy: 0.4850\n",
             "Epoch 4/5\n",
-            "32/32 [==============================] - 0s 2ms/step - loss: 0.7055 - accuracy: 0.5020\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6975 - accuracy: 0.5000\n",
             "Epoch 5/5\n",
-            "32/32 [==============================] - 0s 2ms/step - loss: 0.6973 - accuracy: 0.4830\n"
+            "32/32 [==============================] - 0s 2ms/step - loss: 0.6954 - accuracy: 0.4920\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7abd78e165c0>"
+              "<keras.src.callbacks.History at 0x7c8f95619f00>"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 9
         }
       ]
     },
@@ -764,9 +764,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Lb2N0b5gHPW",
-        "outputId": "a195a8d1-c560-45e5-c982-5b05e888b1f4"
+        "outputId": "edf30db8-8964-4b9d-c644-e14b66b6dd79"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +783,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 10
         }
       ]
     },
@@ -823,19 +823,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tKva9TTMhCJV",
-        "outputId": "1c9ef9c2-e18d-42d7-d77c-65aa97a88d54"
+        "outputId": "8c6018cb-4499-4880-9645-9e533f0c9f75"
       },
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7abd7851da80>"
+              "<keras.src.callbacks.History at 0x7c8f942c2e60>"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 11
         }
       ]
     },
@@ -850,26 +850,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ksl8m835impW",
-        "outputId": "185e0f3f-0e19-4663-9177-b2466990fcc3"
+        "outputId": "21844094-1dd5-4b1e-d487-a6688b827e66"
       },
-      "execution_count": 17,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "32/32 [==============================] - 0s 3ms/step - loss: 0.6933 - accuracy: 0.5000\n"
+            "32/32 [==============================] - 0s 3ms/step - loss: 0.6932 - accuracy: 0.5000\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.6932982802391052, 0.5]"
+              "[0.6932153105735779, 0.5]"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 12
         }
       ]
     },
@@ -888,7 +888,7 @@
       "metadata": {
         "id": "HDjsivkCjEGO"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     }
   ]
