--- a/02_neural_network_classification_with_tensorflow_video.ipynb
+++ b/02_neural_network_classification_with_tensorflow_video.ipynb
@@ -82,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dky9o4LEIX4o",
-        "outputId": "231145e5-abb7-4403-9a55-ed02bba683f7"
+        "outputId": "e7fdabf4-54f6-4d6a-b170-de9885ae51fd"
       },
       "execution_count": 2,
       "outputs": [
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BwtgCCxXIoVC",
-        "outputId": "36419106-fef9-463a-a554-a20fbe21086f"
+        "outputId": "af78a39b-390d-4702-92f9-ff74b3d94391"
       },
       "execution_count": 3,
       "outputs": [
@@ -153,7 +153,7 @@
           "height": 424
         },
         "id": "zRfaa10_IsQC",
-        "outputId": "d365df9f-3267-4dd6-a50e-dfedd1fe3f0b"
+        "outputId": "d551836b-6d8e-4839-d7d3-f577ecd6874a"
       },
       "execution_count": 4,
       "outputs": [
@@ -178,7 +178,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1f3ba393-a2ec-4ea9-a30e-b9cf234edc73\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0a58391a-ae9c-49c4-8cb6-dc6a0f1a8863\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -276,7 +276,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1f3ba393-a2ec-4ea9-a30e-b9cf234edc73')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a58391a-ae9c-49c4-8cb6-dc6a0f1a8863')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -328,12 +328,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1f3ba393-a2ec-4ea9-a30e-b9cf234edc73 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0a58391a-ae9c-49c4-8cb6-dc6a0f1a8863 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1f3ba393-a2ec-4ea9-a30e-b9cf234edc73');\n",
+              "        const element = document.querySelector('#df-0a58391a-ae9c-49c4-8cb6-dc6a0f1a8863');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -353,8 +353,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a8e759ce-69ed-4a2a-a7cf-f05d8df2b0d2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a8e759ce-69ed-4a2a-a7cf-f05d8df2b0d2')\"\n",
+              "<div id=\"df-a558bca8-372d-4335-aa5c-05539f7e6e20\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a558bca8-372d-4335-aa5c-05539f7e6e20')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -473,14 +473,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a8e759ce-69ed-4a2a-a7cf-f05d8df2b0d2 button');\n",
+              "        document.querySelector('#df-a558bca8-372d-4335-aa5c-05539f7e6e20 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_9e21963c-41d1-4eb4-8e75-128e2872627c\">\n",
+              "  <div id=\"id_e2217d0d-ad90-457c-a495-dc6c42082aae\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -524,7 +524,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_9e21963c-41d1-4eb4-8e75-128e2872627c button.colab-df-generate');\n",
+              "        document.querySelector('#id_e2217d0d-ad90-457c-a495-dc6c42082aae button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -562,7 +562,7 @@
           "height": 430
         },
         "id": "NXjNGc9eJb3m",
-        "outputId": "ee0a5f5f-6a6c-4f75-f4c5-990ce274ba55"
+        "outputId": "77018b05-3474-4353-bfaf-719d486dfd1d"
       },
       "execution_count": 5,
       "outputs": [
@@ -607,7 +607,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dMb2fqV3KgYG",
-        "outputId": "6da69a74-188a-4b2c-aa5d-ffe69f3671df"
+        "outputId": "0efd68de-fe47-4ead-f4c1-638f1cabcbaa"
       },
       "execution_count": 6,
       "outputs": [
@@ -634,7 +634,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i2Dh_h2RKr34",
-        "outputId": "13b6c8f6-a1a4-44f4-9cbe-c5ae7ddea0d8"
+        "outputId": "c818cf2c-bb1e-433f-bf9c-a105245a8325"
       },
       "execution_count": 7,
       "outputs": [
@@ -661,7 +661,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H0h8KiRjKxL5",
-        "outputId": "18685446-54fc-46f7-c958-7661d14efc40"
+        "outputId": "a00208b3-8f41-48bf-a594-c1c2ba48a3e2"
       },
       "execution_count": 8,
       "outputs": [
@@ -720,7 +720,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iVmrRuoMLUjs",
-        "outputId": "98ab13c6-3f4c-4b92-cc20-7e5e39d44383"
+        "outputId": "967a3a39-e9b4-495e-c2a7-5198d067b63b"
       },
       "execution_count": 9,
       "outputs": [
@@ -729,22 +729,22 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "32/32 [==============================] - 1s 2ms/step - loss: 2.0477 - accuracy: 0.4620\n",
+            "32/32 [==============================] - 1s 3ms/step - loss: 6.3064 - accuracy: 0.4820\n",
             "Epoch 2/5\n",
-            "32/32 [==============================] - 0s 2ms/step - loss: 0.7337 - accuracy: 0.4970\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 7.7125 - accuracy: 0.5000\n",
             "Epoch 3/5\n",
-            "32/32 [==============================] - 0s 2ms/step - loss: 0.7055 - accuracy: 0.4850\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 7.7125 - accuracy: 0.5000\n",
             "Epoch 4/5\n",
-            "32/32 [==============================] - 0s 2ms/step - loss: 0.6975 - accuracy: 0.5000\n",
+            "32/32 [==============================] - 0s 5ms/step - loss: 7.7125 - accuracy: 0.5000\n",
             "Epoch 5/5\n",
-            "32/32 [==============================] - 0s 2ms/step - loss: 0.6954 - accuracy: 0.4920\n"
+            "32/32 [==============================] - 0s 2ms/step - loss: 7.7125 - accuracy: 0.5000\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7c8f95619f00>"
+              "<keras.src.callbacks.History at 0x7f2d57c16530>"
             ]
           },
           "metadata": {},
@@ -764,7 +764,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Lb2N0b5gHPW",
-        "outputId": "edf30db8-8964-4b9d-c644-e14b66b6dd79"
+        "outputId": "30ccc106-acba-4aae-aed7-ba0d53e91a32"
       },
       "execution_count": 10,
       "outputs": [
@@ -772,14 +772,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "32/32 [==============================] - 0s 2ms/step - loss: 0.6935 - accuracy: 0.5000\n"
+            "32/32 [==============================] - 0s 1ms/step - loss: 7.7125 - accuracy: 0.5000\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.6934831142425537, 0.5]"
+              "[7.712474346160889, 0.5]"
             ]
           },
           "metadata": {},
@@ -823,7 +823,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tKva9TTMhCJV",
-        "outputId": "8c6018cb-4499-4880-9645-9e533f0c9f75"
+        "outputId": "ac505976-e385-4ad2-fdf9-64225022a120"
       },
       "execution_count": 11,
       "outputs": [
@@ -831,7 +831,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7c8f942c2e60>"
+              "<keras.src.callbacks.History at 0x7f2d5493ca30>"
             ]
           },
           "metadata": {},
@@ -850,7 +850,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ksl8m835impW",
-        "outputId": "21844094-1dd5-4b1e-d487-a6688b827e66"
+        "outputId": "e96c069a-8144-403e-e172-382ca9b09b5b"
       },
       "execution_count": 12,
       "outputs": [
@@ -858,14 +858,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "32/32 [==============================] - 0s 3ms/step - loss: 0.6932 - accuracy: 0.5000\n"
+            "32/32 [==============================] - 0s 1ms/step - loss: 0.6933 - accuracy: 0.4870\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.6932153105735779, 0.5]"
+              "[0.693272590637207, 0.4869999885559082]"
             ]
           },
           "metadata": {},
