--- a/02_neural_network_classification_with_tensorflow_video.ipynb
+++ b/02_neural_network_classification_with_tensorflow_video.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLYRqUQ3Jc5HAxUy9692cF",
+      "authorship_tag": "ABX9TyPxImwrtTuyWizRMZWKZQtO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1801,10 +1801,262 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Let's try build our first neural network with a non-linear activation function."
+      ],
+      "metadata": {
+        "id": "WGoD1AOoS1zT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set random seed\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# 1. Create a model with a non-linear activation\n",
+        "model_5 = tf.keras.Sequential([\n",
+        "  tf.keras.layers.Dense(1, activation=tf.keras.activations.relu),\n",
+        "])\n",
+        "\n",
+        "# 2. Compile the model\n",
+        "model_5.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+        "                optimizer=tf.keras.optimizers.Adam(lr=0.001),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "# 3. Fit the model\n",
+        "history = model_5.fit(tf.expand_dims(X, axis=-1), y, epochs=100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "exc7lmMZwDji",
+        "outputId": "24685873-2993-4196-8e5f-9547d07d27ce"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:`lr` is deprecated in Keras optimizer, please use `learning_rate` or use the legacy optimizer, e.g.,tf.keras.optimizers.legacy.Adam.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/100\n",
+            "32/32 [==============================] - 1s 4ms/step - loss: 4.9857 - accuracy: 0.5013\n",
+            "Epoch 2/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.9841 - accuracy: 0.5014\n",
+            "Epoch 3/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.9668 - accuracy: 0.4998\n",
+            "Epoch 4/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.9562 - accuracy: 0.5000\n",
+            "Epoch 5/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.9393 - accuracy: 0.5002\n",
+            "Epoch 6/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.9150 - accuracy: 0.4994\n",
+            "Epoch 7/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.9147 - accuracy: 0.4995\n",
+            "Epoch 8/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.9085 - accuracy: 0.4999\n",
+            "Epoch 9/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.9068 - accuracy: 0.4983\n",
+            "Epoch 10/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.9113 - accuracy: 0.4987\n",
+            "Epoch 11/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.8946 - accuracy: 0.4976\n",
+            "Epoch 12/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.8910 - accuracy: 0.4991\n",
+            "Epoch 13/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.8710 - accuracy: 0.4956\n",
+            "Epoch 14/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.8144 - accuracy: 0.5008\n",
+            "Epoch 15/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.8176 - accuracy: 0.4997\n",
+            "Epoch 16/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.8293 - accuracy: 0.4974\n",
+            "Epoch 17/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.8095 - accuracy: 0.4990\n",
+            "Epoch 18/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.7896 - accuracy: 0.4998\n",
+            "Epoch 19/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.7781 - accuracy: 0.4975\n",
+            "Epoch 20/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.7350 - accuracy: 0.4993\n",
+            "Epoch 21/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.6761 - accuracy: 0.4993\n",
+            "Epoch 22/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.6436 - accuracy: 0.5023\n",
+            "Epoch 23/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.6403 - accuracy: 0.5000\n",
+            "Epoch 24/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.6126 - accuracy: 0.4991\n",
+            "Epoch 25/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.5350 - accuracy: 0.4995\n",
+            "Epoch 26/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.5387 - accuracy: 0.4991\n",
+            "Epoch 27/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.5020 - accuracy: 0.4987\n",
+            "Epoch 28/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4523 - accuracy: 0.5016\n",
+            "Epoch 29/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4691 - accuracy: 0.4993\n",
+            "Epoch 30/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4623 - accuracy: 0.4986\n",
+            "Epoch 31/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4480 - accuracy: 0.4998\n",
+            "Epoch 32/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4657 - accuracy: 0.4964\n",
+            "Epoch 33/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.4559 - accuracy: 0.5008\n",
+            "Epoch 34/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4215 - accuracy: 0.5017\n",
+            "Epoch 35/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4418 - accuracy: 0.5008\n",
+            "Epoch 36/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4404 - accuracy: 0.5002\n",
+            "Epoch 37/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.4409 - accuracy: 0.4988\n",
+            "Epoch 38/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.4576 - accuracy: 0.4983\n",
+            "Epoch 39/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.4219 - accuracy: 0.5008\n",
+            "Epoch 40/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4559 - accuracy: 0.4955\n",
+            "Epoch 41/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4166 - accuracy: 0.4996\n",
+            "Epoch 42/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4248 - accuracy: 0.5005\n",
+            "Epoch 43/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4114 - accuracy: 0.4998\n",
+            "Epoch 44/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4432 - accuracy: 0.4978\n",
+            "Epoch 45/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4183 - accuracy: 0.5002\n",
+            "Epoch 46/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4073 - accuracy: 0.5005\n",
+            "Epoch 47/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4209 - accuracy: 0.4985\n",
+            "Epoch 48/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4146 - accuracy: 0.4996\n",
+            "Epoch 49/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.4162 - accuracy: 0.4994\n",
+            "Epoch 50/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.3656 - accuracy: 0.5002\n",
+            "Epoch 51/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.3834 - accuracy: 0.5003\n",
+            "Epoch 52/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4225 - accuracy: 0.4956\n",
+            "Epoch 53/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4162 - accuracy: 0.4974\n",
+            "Epoch 54/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.3894 - accuracy: 0.4997\n",
+            "Epoch 55/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.4097 - accuracy: 0.4966\n",
+            "Epoch 56/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.3909 - accuracy: 0.4981\n",
+            "Epoch 57/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.3905 - accuracy: 0.4977\n",
+            "Epoch 58/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.3672 - accuracy: 0.4983\n",
+            "Epoch 59/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.3275 - accuracy: 0.4995\n",
+            "Epoch 60/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.3220 - accuracy: 0.4989\n",
+            "Epoch 61/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.3029 - accuracy: 0.4989\n",
+            "Epoch 62/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.2720 - accuracy: 0.4977\n",
+            "Epoch 63/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.2669 - accuracy: 0.4969\n",
+            "Epoch 64/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.2055 - accuracy: 0.5002\n",
+            "Epoch 65/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.2242 - accuracy: 0.4992\n",
+            "Epoch 66/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.2521 - accuracy: 0.4982\n",
+            "Epoch 67/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.2248 - accuracy: 0.4997\n",
+            "Epoch 68/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.2346 - accuracy: 0.4983\n",
+            "Epoch 69/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.2073 - accuracy: 0.4990\n",
+            "Epoch 70/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.2187 - accuracy: 0.4978\n",
+            "Epoch 71/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.2362 - accuracy: 0.4981\n",
+            "Epoch 72/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.2228 - accuracy: 0.4996\n",
+            "Epoch 73/100\n",
+            "32/32 [==============================] - 0s 4ms/step - loss: 4.1955 - accuracy: 0.4997\n",
+            "Epoch 74/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.1790 - accuracy: 0.4991\n",
+            "Epoch 75/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.1896 - accuracy: 0.4982\n",
+            "Epoch 76/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.1285 - accuracy: 0.5022\n",
+            "Epoch 77/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.1380 - accuracy: 0.4967\n",
+            "Epoch 78/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.1614 - accuracy: 0.4991\n",
+            "Epoch 79/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.1509 - accuracy: 0.4996\n",
+            "Epoch 80/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.1363 - accuracy: 0.5006\n",
+            "Epoch 81/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.1018 - accuracy: 0.5015\n",
+            "Epoch 82/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.1023 - accuracy: 0.4988\n",
+            "Epoch 83/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0779 - accuracy: 0.5013\n",
+            "Epoch 84/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.0787 - accuracy: 0.5005\n",
+            "Epoch 85/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.0599 - accuracy: 0.5012\n",
+            "Epoch 86/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 4.0570 - accuracy: 0.5011\n",
+            "Epoch 87/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0430 - accuracy: 0.5013\n",
+            "Epoch 88/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0782 - accuracy: 0.4981\n",
+            "Epoch 89/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0597 - accuracy: 0.4995\n",
+            "Epoch 90/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0630 - accuracy: 0.4978\n",
+            "Epoch 91/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0745 - accuracy: 0.4952\n",
+            "Epoch 92/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0411 - accuracy: 0.4977\n",
+            "Epoch 93/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0200 - accuracy: 0.4992\n",
+            "Epoch 94/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0238 - accuracy: 0.4992\n",
+            "Epoch 95/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 4.0387 - accuracy: 0.4972\n",
+            "Epoch 96/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 3.9734 - accuracy: 0.5009\n",
+            "Epoch 97/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 3.8466 - accuracy: 0.5015\n",
+            "Epoch 98/100\n",
+            "32/32 [==============================] - 0s 3ms/step - loss: 3.8371 - accuracy: 0.4999\n",
+            "Epoch 99/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 3.8660 - accuracy: 0.4999\n",
+            "Epoch 100/100\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 3.8512 - accuracy: 0.5019\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "exc7lmMZwDji"
+        "id": "B-LdwbKrVHqp"
       },
       "execution_count": null,
       "outputs": []
